feat: adicionados eventos e perfil | init: fillament

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -73,8 +73,8 @@
     --popover-foreground: #000;
     --primary: #FB923C; /* Laranja */
     --primary-foreground: #FFFFFF;
-    --secondary: #6B7280; /* Cinzento */
-    --secondary-foreground: #FB923C; /* Laranja */
+    --secondary:  #F97316; /* Cinzento */
+    --secondary-foreground: #FFFFFF; /* Laranja */
     --muted: #FB923C; /* Laranja Escuro */
     --muted-foreground: #444; /* Laranja */
     --accent: #fffffd; /* Cinzento */
